plugins {
	id 'org.springframework.boot' version '2.7.5'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	id 'java'
	id 'org.siouan.frontend-jdk11' version '6.0.0'
}

group = 'cz.cvut.fit.training_plan_generator'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
	runtimeOnly 'org.springdoc:springdoc-openapi-ui:1.6.14'
	runtimeOnly 'org.springdoc:springdoc-openapi-data-rest:1.6.14'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
